--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Portfólio | Wagner</title>
+<title>Portfólio | Vinicius</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
-<h1>Wagner</h1>
+<h1>Vinicius</h1>
 <p>Desenvolvedor Web | Designer</p>
 </header>
 
@@ -22,7 +22,7 @@
 
 <section id="sobre">
 <h2>Sobre Mim</h2>
-<p>Olá! Meu nome é Wagner, sou apaixonado por tecnologia e design. Tenho experiência em desenvolvimento web e criação de interfaces intuitivas.</p>
+<p>Olá! Meu nome é Vinicius, sou apaixonado por tecnologia e design. Tenho experiência em desenvolvimento web e criação de interfaces intuitivas.</p>
 </section>
 
 <section id="projetos">
@@ -39,12 +39,12 @@
 
 <section id="contato">
 <h2>Contato</h2>
-<p>Email: <a href="mailto:wagner@email.com">wagner@email.com</a></p>
+<p>Email: <a href="mailto:vinicius@email.com">vinicius@email.com</a></p>
 <p>LinkedIn: <a href="#">linkedin.com/in/wagner</a></p>
 </section>
 
 <footer>
-<p>© 2025 Wagner. Todos os direitos reservados.</p>
+<p>© 2025 Vinicius. Todos os direitos reservados.</p>
 </footer>
 </body>
 </html>
